Fixed JS block vertical alignment in footer.

--- a/app/assets/stylesheets/components/appFooter.scss
+++ b/app/assets/stylesheets/components/appFooter.scss
@@ -24,6 +24,7 @@
 
     .appFooter-logos-item.mod-jumpstart {
       margin: 0;
+      vertical-align: text-bottom;
 
       .appFooter-logos-item-image {
         padding-left: 6px;
